--- a/code/second_code/sort_C.html
+++ b/code/second_code/sort_C.html
@@ -20,7 +20,7 @@
         <section>
             <div class="sidebar">
                 <li>
-                    <a href="https://phw-plain.github.io/">
+                    <a href="https://phw-plain.github.io/mirimrestaurant">
                         <i class="fas fa-home"></i>
                         HOME
                     </a>
