--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <section>
             <div class="sidebar">
                 <li>
-                    <a href="https://phw-plain.github.io/mirimrestaurant">
+                    <a href="https://phw-plain.github.io/mirimrestaurant/">
                         <i class="fas fa-home"></i>
                         HOME
                     </a>
