--- a/code/second_code/sort_F.html
+++ b/code/second_code/sort_F.html
@@ -21,7 +21,7 @@
         <section>
             <div class="sidebar">
                 <li>
-                    <a href="https://phw-plain.github.io/mirimrestaurant/">
+                    <a href="https://phw-plain.github.io/MirimRestaurant/">
                         <i class="fas fa-home"></i>
                         HOME
                     </a>
