--- a/code/분식/shop.html
+++ b/code/분식/shop.html
@@ -8,7 +8,7 @@
         </head>
         <body>
             <div class ="go-home">
-                    <a href="https://phw-plain.github.io/">
+                    <a href="../../index.html">
                         <img id = "go-home" src = "../../img/third_img/미림식당_home.png">
                     </a>
                 </div>
