--- a/code/일식/japanese_niwa.html
+++ b/code/일식/japanese_niwa.html
@@ -9,7 +9,7 @@
         </head>
         <body>
             <div class ="go-home">
-                <a href="https://phw-plain.github.io">
+                <a href="h../../index.html">
                     <img id = "go-home" src = "../../img/third_img/미림식당_home.png">
                 </a>
             </div>
